Add dependencies for Unit Testing