@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '0.14.449'
+    ext.kotlin_version = '1.0.0-beta-3595'
     repositories {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
@@ -36,14 +36,14 @@ def mixpanel_key = hasProperty('MIXPANEL_UNISANNIO') ? MIXPANEL_UNISANNIO : Syst
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "solutions.alterego.android.unisannio"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 2
-        versionName "20151004"
+        versionName "20151214"
         multiDexEnabled true
     }
 
@@ -100,17 +100,27 @@ android {
         orderByMethodCount = true
         verbose = false
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     compile 'com.github.alter-ego:advanced-android-logger:-SNAPSHOT'
     compile 'com.alterego:androidrssreaderlibrary:1.0.0'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile "com.android.support:appcompat-v7:23.1.1"
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:multidex:1.0.1'
 
     compile "com.mixpanel.android:mixpanel-android:4.6.4"
     compile "com.google.android.gms:play-services-analytics:8.1.0"
@@ -119,15 +129,15 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.dagger:dagger:2.0.1'
 
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
-    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
 
     apt "org.projectlombok:lombok:1.14.8"
     apt "com.google.dagger:dagger-compiler:2.0.1"
 
     provided 'javax.annotation:jsr250-api:1.0'
     provided "org.projectlombok:lombok:1.14.8"
+
+    compile "org.parceler:parceler-api:1.0.3"
+    apt "org.parceler:parceler:1.0.3"
 
     compile 'org.jsoup:jsoup:1.7.3'
     compile 'com.google.code.gson:gson:2.3'
@@ -140,16 +150,26 @@ dependencies {
     }
 
     compile 'com.joanzapata.android:android-iconify:1.0.9'
-
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
     compile 'net.danlew:android.joda:2.8.2'
 
-    compile "org.parceler:parceler-api:1.0.3"
-    apt "org.parceler:parceler:1.0.3"
     compile 'com.github.DreaminginCodeZH:CustomTabsHelper:v1.0.1'
+
+    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+
+    testCompile('junit:junit:4.12') {
+        exclude module: 'hamcrest'
+        exclude module: 'hamcrest-core'
+    }
+    testCompile 'org.easytesting:fest-assert-core:2.0M10'
+    testCompile('org.mockito:mockito-core:1.10.19') {
+        exclude module: 'hamcrest'
+        exclude module: 'hamcrest-core'
+    }
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
